--- a/src/App.module.css
+++ b/src/App.module.css
@@ -3,4 +3,10 @@
   grid-template-columns: 1fr;
   grid-gap: 16px;
   padding-bottom: 24px;
+  background-color: lightskyblue;
+}
+.button {
+  display: flex;
+  justify-content: center;
+  margin-top: 30px;
 }
